--- a/clientes/view/vew_iglesiaSanNorberto/registro-horarios/navbarr.html
+++ b/clientes/view/vew_iglesiaSanNorberto/registro-horarios/navbarr.html
@@ -15,8 +15,9 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="scroll active"><a href="/webline/index.php">Inicio Webline</a></li>
-                    <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/registro-horarios/reservaMisa/formularioDeReserva.php">Reservar cupo a Misa</a></li>
-                    <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/registro-horarios/registroDeUsuario/Registro.php">Registro San Norberto</a></li>
+                    <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/registro-horarios/reservaMisa/formularioDeReserva">Reservar cupo a Misa</a></li>
+                    <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/registro-horarios/registroDeUsuario/Registro">Registro San Norberto</a></li>
+                    <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/perfil-usuarios/LoginUsuarios">Ingreso usuaios</a></li>
                     
                 </ul>
             </div>
