--- a/clientes/view/view_Servicios/css/servicios.css
+++ b/clientes/view/view_Servicios/css/servicios.css
@@ -61,6 +61,7 @@
         color: #017fb5;
     }
     .seleccionservicios {
+        font-size: 11px;
         background: rgba(144, 144, 144, 0.192);
         padding-top: 5px;
         padding-bottom: 5px;
