--- a/clientes/view/vew_iglesiaSanNorberto/registro-horarios/navbarr.html
+++ b/clientes/view/vew_iglesiaSanNorberto/registro-horarios/navbarr.html
@@ -17,7 +17,7 @@
                     <li class="scroll active"><a href="/webline/index.php">Inicio Webline</a></li>
                     <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/registro-horarios/reservaMisa/formularioDeReserva">Reservar cupo a Misa</a></li>
                     <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/registro-horarios/registroDeUsuario/Registro">Registro San Norberto</a></li>
-                    <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/perfil-usuarios/LoginUsuarios">Ingreso usuarios</a></li>
+                    <li class="scroll"><a href="/webline/clientes/view/vew_iglesiaSanNorberto/login/login?tipo=visitante">Ingreso usuarios</a></li>
                 </ul>
             </div>
         </div>
