--- a/clientes/view/vew_iglesiaSanNorberto/registro-horarios/reservaMisa/css/responsive.css
+++ b/clientes/view/vew_iglesiaSanNorberto/registro-horarios/reservaMisa/css/responsive.css
@@ -1,6 +1,7 @@
 @media (max-width: 767px) {
   .head h1 {
-    font-size: 20px;
+    font-size: 30px;
+    text-shadow: none;
   }
   .head img {
     width: 80%;
