--- a/clientes/view/vew_iglesiaSanNorberto/perfil-usuarios/css/style.css
+++ b/clientes/view/vew_iglesiaSanNorberto/perfil-usuarios/css/style.css
@@ -9,15 +9,24 @@
   margin-bottom: 50px;
 }
 .cerrarSesion {
+  color: #ffff;
+  border: 3px solid #028fcc;
+  background: rgb(2, 143, 204, 0.4);
   width: 25%;
   margin-top: 40px;
   margin-left: 40px;
   margin-right: 40px;
   margin-bottom: 40px;
   float: left;
+  padding: 10px;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
+  -moz-box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
+  box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
 }
-.cerrarSesion p{
-    font-size: 20px;
+
+.cerrarSesion p {
+  font-size: 20px;
 }
 .tituloPerfil {
   width: 55%;
@@ -28,23 +37,46 @@
   margin-bottom: 40px;
   float: left;
 }
-.tituloPerfil h1{
-    font-size: 30px;
+.tituloPerfil h1 {
+  font-size: 30px;
+}
+.datosPersonales h3{
+  color: #ffff;
+  font-weight: 700;
 }
 .datosPersonales {
+  padding: 10px;
+  border: 3px solid #028fcc;
+  background: rgb(2, 143, 204, 0.4);
   width: 30%;
   margin-top: 40px;
   margin-left: 40px;
   margin-right: 40px;
   margin-bottom: 40px;
   float: left;
+  -webkit-box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
+  -moz-box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
+  box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
 }
 
 .reporteReservas {
+  padding: 10px;
+  border: 3px solid #028fcc;
+  background: rgb(2, 143, 204, 0.4);
   width: 50%;
   margin-top: 40px;
   margin-left: 40px;
   margin-right: 40px;
   margin-bottom: 40px;
   float: left;
+  -webkit-box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
+  -moz-box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
+  box-shadow: 0px 0px 21px -2px rgba(125, 141, 150, 1);
+}
+
+.reporteReservas input{
+  color: #ffff;
+  margin-top: 2px;
+  border: none;
+  background: rgb(2, 143, 204, 0.6);
 }
